[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapeflow"
version = "0.1.0"
description = "Parallel workflow for web scraping and processing"
authors = [{name = "Zsolt Terek"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["scraping", "web", "parallel", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "aioftp>=0.21.0",
    "pandas>=1.5.0",
    "pillow>=9.0.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.urls]
Homepage = "https://github.com/terek/scrapeflow"
Repository = "https://github.com/terek/scrapeflow.git"
Issues = "https://github.com/terek/scrapeflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapeflow"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/scrapeflow",
    "/README.md",
    "/pyproject.toml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]